Updated Notebook and HTML

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1097,9 +1097,9 @@
     "    print('1st convolution activated',conv1)\n",
     "    \n",
     "    #Layer 2 Convolutional. Input = 28x28x6. Output = 24x24x12\n",
-    "    w2 = tf.Variable(tf.truncated_normal([5, 5, 1, 12], mu, sigma))\n",
+    "    w2 = tf.Variable(tf.truncated_normal([5, 5, 6, 12], mu, sigma))\n",
     "    b2 = tf.Variable(tf.truncated_normal([12], mu, sigma))\n",
-    "    conv2 = tf.nn.conv2d(x, w2, strides, padding) + b2\n",
+    "    conv2 = tf.nn.conv2d(conv1, w2, strides, padding) + b2\n",
     "    print('2nd convolution',conv2)\n",
     "    \n",
     "    # Activation. \n",
